# nanogear

./: .gitignore  .hgtags  CMakeLists.txt  GenerateNanogearConfig.cmake  GeneratenanogearConfig.cmake  NanogearConfig.cmake.in  UseNanogear.cmake.in  VERSION.cmake  _Usenanogear.cmake.in  nanogearConfig.cmake.in
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branchheads  tags
.hg/store/: 00changelog.i  00manifest.i  fncache  undo
.hg/store/data/: _a_u_t_h_o_r_s.i  _c_make_lists.txt.i  _c_o_p_y_i_n_g._l_i_b.i  _c_o_p_y_i_n_g.i  _c_test_config.cmake.i  _c_test_config.txt.i  _n_e_w_s.i  _nanogear-_makefile.mk.i  _v_e_r_s_i_o_n.cmake.i  nanogear-_makefile.mk.i  nanogear.kdev4.i  server__info.cpp.i  server__info.hpp.i  ~2ebranch.i  ~2ecproject.i  ~2edep.inc.i  ~2egitignore.i  ~2ehgtags.i  ~2eproject.i
.hg/store/data/cli/: _c_make_lists.txt.i  generate__project.cpp.i  generate__project.hpp.i  main.cpp.i  utils.cpp.i  utils.hpp.i
.hg/store/data/cmake/modules/: _find_libmagic.cmake.i  _lib_find_macros.cmake.i  _nanogear_c_pack_config.cmake.i  _nanogear_version.cmake.i
.hg/store/data/docs/: _c_make_lists.txt.i  _doxyfile.i  _doxyfile.in.i  _r_e_a_d_m_e.i
.hg/store/data/examples/: _c_make_lists.txt.i  example__server.cpp.i
.hg/store/data/examples/clientinfo/: _c_make_lists.txt.i  main.cpp.i
.hg/store/data/examples/directory/: _c_make_lists.txt.i  main.cpp.i
.hg/store/data/examples/forms/: _c_make_lists.txt.i  main.cpp.i
.hg/store/data/examples/simple/: _c_make_lists.txt.i  main.cpp.i
.hg/store/data/examples/webforms2/: _c_make_lists.txt.i  main.cpp.i
.hg/store/data/httpd/: _c_make_lists.txt.i  qhttpserver.cpp.i  qhttpserver.h.i
.hg/store/data/lib/: _c_make_lists.txt.i  application.h.i  context.h.i  genheaders.sh.i  httpserver.cpp.i  httpserver.h.i  representation.h.i  resource.cpp.i  resource.h.i  response.h.i  router.cpp.i  router.h.i  server.cpp.i  server.h.i  stringrepresentation.h.i  uniform.h.i
.hg/store/data/lib/_nanogear/: _application.cpp.i  _application.h.i  _application.i  _c_make_lists.txt.i  _character_set.cpp.i  _character_set.h.i  _client_info.cpp.i  _client_info.h.i  _client_info.i  _context.cpp.i  _context.h.i  _context.i  _media_type.cpp.i  _media_type.h.i  _media_type.i  _method.cpp.i  _method.h.i  _method.i  _mime_type.cpp.i  _mime_type.h.i  _mime_type.i  _preference.h.i  _preference.i  _preference_list.h.i  _preference_list.i  _request.cpp.i  _request.h.i  _request.i  _response.cpp.i  _response.h.i  _response.i  _router.cpp.i  _router.h.i  _router.i  _server.cpp.i  _server.h.i  _server.i  _status.cpp.i  _status.h.i  _status.i
.hg/store/data/lib/_nanogear/_concrete/: _c_make_lists.txt.i
.hg/store/data/lib/_nanogear/_resource/: _c_make_lists.txt.i  _directory.cpp.i  _directory.h.i  _directory.i  _representation.cpp.i  _representation.h.i  _representation.i  _resource.cpp.i  _resource.h.i  _resource.i  _string_representation.h.i  _string_representation.i
.hg/store/data/lib/rest/: _c_make_lists.txt.i
.hg/store/data/libs/: _c_make_lists.txt.i  resource.cpp.i  resource.h.i
.hg/store/data/libs/http/: _c_make_lists.txt.i
.hg/store/data/libs/rest/: _a_u_t_h_o_r_s.i  _c_make_lists.txt.i  _c_o_p_y_i_n_g.i  application.cpp.i  application.hpp.i  client.cpp.i  client.hpp.i  component.cpp.i  component.hpp.i  connector.cpp.i  connector.hpp.i  context.cpp.i  context.hpp.i  controller.cpp.i  controller.hpp.i  filter.cpp.i  filter.hpp.i  restlet.cpp.i  restlet.hpp.i  uniform.cpp.i  uniform.hpp.i
.hg/store/data/libs/rest/data/: challenge__request.cpp.i  challenge__request.hpp.i  challenge__response.cpp.i  challenge__response.hpp.i  challenge__scheme.cpp.i  challenge__scheme.hpp.i  character__set.cpp.i  character__set.hpp.i  client__info.cpp.i  client__info.hpp.i  conditions.cpp.i  conditions.hpp.i  cookie.cpp.i  (+33 more)
.hg/store/data/libs/rest__api/: _c_make_lists.txt.i  _t_o_d_o.i
.hg/store/data/libs/rest__http/: _c_make_lists.txt.i
.hg/store/data/nbproject/: _makefile-_default.mk.i  _makefile-impl.mk.i  _makefile-variables.mk.i  _package-_default.bash.i  configurations.xml.i  project.xml.i
.hg/store/data/nbproject/private/: configurations.xml.i  private.xml.i
.hg/store/data/resources/emacs/: _r_e_a_d_m_e.i
.hg/store/data/resources/templates/: cpp.i  hpp.i
.hg/store/data/scripts/: genheaders.py.i  genheaders.sh.i
.hg/store/data/src/: _c_make_lists.txt.i
.hg/store/data/src/connectors/: _c_make_lists.txt.i
.hg/store/data/src/core/: _c_make_lists.txt.i  _n_application.i  _n_client_info.i  _n_directory_resource.i  _n_metadata.i  _n_method.i  _n_mime_type.i  _n_preference.i  _n_preference_list.i  _n_protocol.i  _n_representation.i  _n_request.i  _n_resource.i  _n_response.i  _n_router.i  _n_server.i  _n_status.i  _n_uniform.i  napplication.h.i  nclientinfo.h.i  ncomponent.h.i  nconnector.h.i  ndirectoryresource.cpp.i  ndirectoryresource.h.i  nmetadata.h.i  nmethod.cpp.i  nmethod.h.i  nmimetype.cpp.i  nmimetype.h.i  npreference.h.i  npreferencelist.h.i  nprotocol.cpp.i  nprotocol.h.i  nrepresentation.cpp.i  nrepresentation.h.i  nrequest.h.i  nresource.cpp.i  nresource.h.i  nresponse.h.i  nrouter.cpp.i  (+5 more)
.hg/store/data/tests/: _c_make_lists.txt.i
.hg/store/data/tests/core/: _c_make_lists.txt.i
.hg/store/data/www/: header.jpg.i  header.xcf.i
examples/forms/: main.cpp
examples/simple/: main.cpp
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: CMakeLists.txt
src/connectors/ihttp/: CMakeLists.txt  ihttp_global.h  nhttpserver.h
src/connectors/ihttp/tests/: CMakeLists.txt  main.cpp  nresourcecustom.h  testApplication.cpp  testApplication.h
src/core/: CMakeLists.txt  NApplication  nanogear_global.h  napplication.cpp  napplication.h  nclientinfo.h  ncomponent.h  nconnector.h  ndirectoryresource.cpp  ndirectoryresource.h  nmetadata.h  nmethod.h  nmimetype.h  npreference.h  npreferencelist.h  nprotocol.h  nrepresentation.h  nrequest.h  nresource.h  nresponse.h  nrouter.h  nserver.cpp  nserver.h  nstatus.h  nuniform.h
(+131 files in other folders)
